# neurodeck

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.MD  build_and_test.sh
.github/workflows/: main.yml
core/: CMakeLists.txt  config_parser.cpp  config_parser.hpp  file_io.cpp  file_io.hpp  lua_command_wrapper.cpp  lua_command_wrapper.hpp  lua_manager.cpp  lua_manager.hpp  lua_plugin.cpp  lua_plugin.hpp  plugin.hpp
desktop/: CMakeLists.txt  main.cpp
docs/: plugin_api.md
plugins/: CMakeLists.txt  echo_plugin.cpp  hello_plugin.cpp
scripts/: check_coverage.py
scripts/plugins/: echo.lua  hello.lua
shell/: CMakeLists.txt  command.cpp  command.hpp  command_registry.cpp  command_registry.hpp  main.cpp  tokenize.cpp  tokenize.hpp
shell/commands/: clear.cpp  clear.hpp  exec_command.cpp  exec_command.hpp  exit.cpp  exit.hpp  help.cpp  help.hpp  load_plugin_command.hpp  ls.cpp  ls.hpp  lua_command.cpp  lua_command.hpp  open.cpp  open.hpp  unload_plugin_command.hpp
tests/: CMakeLists.txt  test_clear_command.cpp  test_command_registry.cpp  test_config_parser.cpp  test_dispatch.cpp  test_exec_command.cpp  test_exit_command.cpp  test_file_io.cpp  test_help_command.cpp  test_load_plugin_command.cpp  test_ls_command.cpp  test_lua_command.cpp  test_main.cpp  test_open_command.cpp  test_sample.cpp  test_tokenize.cpp  test_unified_plugin_system.cpp  test_unload_plugin_command.cpp
tests/test_scripts/: mylua.lua  myscript.sh
